--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -16,6 +16,43 @@
 </head>
 
 <body>
+    <!-- Barra de navegación del sitio web -->
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid p-3 mb-2 bg-danger text-white">
+            <a class="navbar-brand text-white" href="#">Inicio</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active text-white" aria-current="page" href="#">Preguntas Frecuentes</a>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Importaciones
+                        </a>
+                        <!-- Menú desplegable -->
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="#">Importaciones Comestibles</a></li>
+                            <li><a class="dropdown-item" href="#">Importaciones Electrónica</a></li>
+                            <li><a class="dropdown-item" href="#">Importaciones Químicos</a></li>
+                            <li><a class="dropdown-item" href="#">Importaciones Agroindustrial</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Información</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 </body>
 
