--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -12,15 +12,40 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="estilos/estilos.css">
+    <link rel="stylesheet" href="estilos/estilos.css">
     <title>Inicio</title>
+
+    <style>
+        .mapa {
+            display: grid;
+            justify-content: center;
+        }
+
+        .info-contacto {
+            padding: 15px;
+            display: grid;
+            grid-template-columns: repeat(2, auto);
+            border: 2px solid black;
+            padding: 15px;
+            column-gap: 120px;
+        }
+
+        .formulario {
+            display: grid;
+            grid-template-rows: repeat(2, auto);
+            padding: 15px;
+            width: 500pt;
+            
+        }
+    </style>
 </head>
 
 <body>
     <!-- Cabecera de la página Web -->
     <center>
-        <IMG SRC="https://equimaxecuador.com.ec/wp-content/uploads/2022/04/Palabra-Equimax-6.png" ALIGN=CENTER WIDTH=300 HEIGHT=150>
-        <h1>Importadora industrial"</h1>
+        <IMG SRC="https://equimaxecuador.com.ec/wp-content/uploads/2022/04/Palabra-Equimax-6.png" ALIGN=CENTER WIDTH=300
+            HEIGHT=150>
+        <h1>Importadora industrial</h1>
     </center>
 
     <!-- Barra de navegación del sitio web -->
@@ -64,133 +89,179 @@
         </div>
     </nav>
 
-    <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted">
-    <!-- Section: Social media -->
-    <section
-      class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
-    >
-      <!-- Left -->
-      <div class="me-5 d-none d-lg-block">
-        <span>Importamos una gran variedad de productos en diferentes categorías bajo pedido</span>
-      </div>
-      <!-- Left -->
-  
-      <!-- Right -->
-      <div>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-google"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
-      <!-- Right -->
-    </section>
-    <!-- Section: Social media -->
-  
-    <!-- Section: Links  -->
-    <section class="">
-      <div class="container text-center text-md-start mt-5">
-        <!-- Grid row -->
-        <div class="row mt-3">
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <!-- Content -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              <i class="fas fa-gem me-3"></i>Equimax - Ecuador
-            </h6>
-            <p>
-                Conocemos gran variedad de proveedores de alta calidad con diferentes soluciones para la industria ecuatoriana
-            </p>
-          </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              Productos de importación
-            </h6>
-            <p>
-              <a href="#!" class="text-reset">Comesitbles</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Electrónicos</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Químicos</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Agroindustriales</a>
-            </p>
-          </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              Navegación
-            </h6>
-            <p>
-              <a href="#!" class="text-reset">Transparencia legal</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Quienes somos</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Preguntas frecuentes</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Información de contacto</a>
-            </p>
-          </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
-          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              Contact
-            </h6>
-            <p><i class="fas fa-home me-3"></i> Santo Domingo de los Tsáchilas, Ecuador</p>
-            <p>
-              <i class="fas fa-envelope me-3"></i>
-              equimax@gmail.com
-            </p>
-            <p><i class="fas fa-phone me-3"></i> + 593 974 152 123</p>
-            <p><i class="fas fa-print me-3"></i> + 02 3756 056</p>
-          </div>
-          <!-- Grid column -->
-        </div>
-        <!-- Grid row -->
-      </div>
-    </section>
-    <!-- Section: Links  -->
-  
-    <!-- Copyright -->
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-      © 2021 Copyright:
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">Equimax S.A.</a>
+    <br>
+    <!--Google map-->
+    <div class="mapa">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d997.44505280262!2d-79.16348117081854!3d-0.2504239999885698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x18f4270f57a01979!2zMMKwMTUnMDEuNSJTIDc5wrAwOSc0Ni42Ilc!5e0!3m2!1ses-419!2sec!4v1654567889305!5m2!1ses-419!2sec"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
     </div>
-    <!-- Copyright -->
-  </footer>
-  <!-- Footer -->
 
-   
+    <br>
+
+    <div class="contacto">
+        <div class="info-contacto">
+            <div>
+                <h4><b> Dirección:</b></h2>
+                    <h5>Santo Domingo de los Tsáchilas, Ecuador</h3>
+                        <h5>Av. Abraham Calazacom, Quito</h5>
+            </div>
+            <div>
+                <h4><b> Teléfonos:</b></h2>
+                    <h5>+593 974 152 123</h3>
+                        <h5>02 3756 056</h5>
+            </div>
+        </div>
+
+        <!-- Sección de formulario -->
+        <div class="formulario ">
+
+            <div>
+                <h2>Escríbenos</h2>
+            </div>
+
+            <div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Escríbenos</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Pie de página -->
+    <footer class="text-center text-lg-start bg-light text-muted">
+        <!-- Section: Social media -->
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+            <!-- Left -->
+            <div class="me-5 d-none d-lg-block">
+                <span>Importamos una gran variedad de productos en diferentes categorías bajo pedido</span>
+            </div>
+            <!-- Left -->
+
+            <!-- Right -->
+            <div>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-google"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
+            <!-- Right -->
+        </section>
+        <!-- Section: Social media -->
+
+        <!-- Section: Links  -->
+        <section class="">
+            <div class="container text-center text-md-start mt-5">
+                <!-- Grid row -->
+                <div class="row mt-3">
+                    <!-- Grid column -->
+                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                        <!-- Content -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            <i class="fas fa-gem me-3"></i>Equimax - Ecuador
+                        </h6>
+                        <p>
+                            Conocemos gran variedad de proveedores de alta calidad con diferentes soluciones para la
+                            industria ecuatoriana
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <!-- Links -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            Productos de importación
+                        </h6>
+                        <p>
+                            <a href="#!" class="text-reset">Comesitbles</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Electrónicos</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Químicos</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Agroindustriales</a>
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <!-- Links -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            Navegación
+                        </h6>
+                        <p>
+                            <a href="#!" class="text-reset">Transparencia legal</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Quienes somos</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Preguntas frecuentes</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Información de contacto</a>
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                        <!-- Links -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            Contact
+                        </h6>
+                        <p><i class="fas fa-home me-3"></i> Santo Domingo de los Tsáchilas, Ecuador</p>
+                        <p>
+                            <i class="fas fa-envelope me-3"></i>
+                            equimax@gmail.com
+                        </p>
+                        <p><i class="fas fa-phone me-3"></i> + 593 974 152 123</p>
+                        <p><i class="fas fa-print me-3"></i> + 02 3756 056</p>
+                    </div>
+                    <!-- Grid column -->
+                </div>
+                <!-- Grid row -->
+            </div>
+        </section>
+        <!-- Section: Links  -->
+
+        <!-- Copyright -->
+        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+            © 2021 Copyright:
+            <a class="text-reset fw-bold" href="https://mdbootstrap.com/">Equimax S.A.</a>
+        </div>
+        <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+
+
 </body>
 
 </html>
