--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -22,7 +22,7 @@
     <center>
         <IMG SRC="https://equimaxecuador.com.ec/wp-content/uploads/2022/04/Palabra-Equimax-6.png" ALIGN=CENTER WIDTH=300
             HEIGHT=150>
-        <h1>Importadora industrial"</h1>
+        <h1>Importadora industrial</h1>
     </center>
 
     <!-- Barra de navegación del sitio web -->
@@ -69,6 +69,7 @@
     <!-- Carrusel de imagenes -->
     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
+            <!-- Botones de carrusel -->
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
@@ -78,23 +79,29 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
+                <!-- Imágen de carrusel -->
                 <img src="imagenes/imagen1.jpg" class="d-block w-100" alt="Importaciones" width="100" height="550">
+                <!-- Etiqueta y texto de imágen de carrusel -->
                 <div class="carousel-caption d-none d-md-block text-light bg-dark">
                     <h2>Expertos en importación</h2>
                     <p>Nuestra empresa cuenta con profesionales expertos en el área de aduana e importaciones.</p>
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
+                 <!-- Imágen de carrusel -->
                 <img src="imagenes/comestibles.jpg" class="d-block w-100" alt="Productos comestibles" width="100"
                     height="550">
+                <!-- Etiqueta y texto de imágen de carrusel -->
                 <div class="carousel-caption d-none d-md-block text-light bg-dark">
                     <h2>Gran variedad de productos</h2>
                     <p>Importamos una amplia gama de productos para clientes nacionales.</p>
                 </div>
             </div>
             <div class="carousel-item">
+                 <!-- Imágen de carrusel -->
                 <img src="imagenes/agroindustria.jpg" class="d-block w-100" alt="agroindustria" width="100"
                     height="550">
+                <!-- Etiqueta y texto de imágen de carrusel -->
                 <div class="carousel-caption d-none d-md-block text-light bg-dark">
                     <h2>Herramientas para el sector agrícla</h2>
                     <p>Importamos gran variedad de herramientas industriales para el uso agrícola</p>
@@ -112,34 +119,44 @@
     </div>
 
     <br>
-    <div class="col-xs-12" align="center">
-        <div class="col-md-12" align="center">
-            <div class="form-group" align="center">
-                <label class="control-label col-md-12">
-                    <FONT SIZE=4>
-                        <p class="mb-0">EQUIMAX ECUADOR Importamos lo que necesite para su industria o negocio, con el
-                            apoyo de Ingenieros mecánicos, eléctricos, de control y civiles que comprenden su necesidad,
-                            Aportamos con ideas, busca de proveedores y entrega en los mejores tiempos y costos. EQUIMAX
-                            ECUADOR, además, ofrece maquinaria, equipo y suministros industriales a nivel nacional, con
-                            excelentes precios y servicio ágil y personalizado. </p><cite title="Source Title">ESPE -
-                            SD</cite>
-                    </FONT>
-                </label>
+    <!-- Sección de cita en bloque -->
+    <blockquote>
+        <div class="col-xs-12" align="center">
+            <div class="col-md-12" align="center">
+                <div class="form-group" align="center">
+                    <label class="control-label col-md-12">
+                        <!-- Parrafo de cita en bloque -->
+                        <FONT SIZE=4>
+                            <p class="mb-0">EQUIMAX ECUADOR Importamos lo que necesite para su industria o negocio, con
+                                el
+                                apoyo de Ingenieros mecánicos, eléctricos, de control y civiles que comprenden su
+                                necesidad,
+                                Aportamos con ideas, busca de proveedores y entrega en los mejores tiempos y costos.
+                                EQUIMAX
+                                ECUADOR, además, ofrece maquinaria, equipo y suministros industriales a nivel nacional,
+                                con
+                                excelentes precios y servicio ágil y personalizado. </p><cite
+                                title="Source Title">Equimax</cite>
+                        </FONT>
+                    </label>
+                </div>
             </div>
         </div>
-    </div><br>
+    </blockquote>
+
+    <br>
 
     <!-- Pie de página  -->
     <footer class="text-center text-lg-start bg-light text-muted">
-        <!-- Section: Social media -->
+        
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-            <!-- Left -->
+            <!-- Izquierda -->
             <div class="me-5 d-none d-lg-block">
                 <span>Importamos una gran variedad de productos en diferentes categorías bajo pedido</span>
             </div>
-            <!-- Left -->
+            <!-- Centro -->
 
-            <!-- Right -->
+         
             <div>
                 <a href="" class="me-4 text-reset">
                     <i class="fab fa-facebook-f"></i>
@@ -160,9 +177,9 @@
                     <i class="fab fa-github"></i>
                 </a>
             </div>
-            <!-- Right -->
+            <!-- Derecha -->
         </section>
-        <!-- Section: Social media -->
+  
 
         <!-- Section: Links  -->
         <section class="">
@@ -235,8 +252,8 @@
                             <i class="fas fa-envelope me-3"></i>
                             equimax@gmail.com
                         </p>
-                        <p><i class="fas fa-phone me-3"></i> + 593 974 152 123</p>
-                        <p><i class="fas fa-print me-3"></i> + 02 3756 056</p>
+                        <p><i class="fas fa-phone me-3"></i> +593 974 152 123</p>
+                        <p><i class="fas fa-print me-3"></i> 02 3756 056</p>
                     </div>
                     <!-- Grid column -->
                 </div>
