--- a/templates/informacion.html
+++ b/templates/informacion.html
@@ -63,6 +63,9 @@
             </ul>
           </li>
           <li class="nav-item">
+            <a class="nav-link text-white" href="#">Proveedores</a>
+        </li>
+          <li class="nav-item">
             <a class="nav-link text-white" href="#">Información</a>
           </li>
           <li class="nav-item">
