--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -76,6 +76,9 @@
                         </ul>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Proveedores</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-white" href="#">Información</a>
                     </li>
                     <li class="nav-item">
