--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -12,8 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="estilos/estilos.css">
-    <link rel="stylesheet" href="imagenes/Cómo se clasifican las Importaciones en la Ley General de Aduanas.jpg">
+    <link rel="stylesheet" href="{{ url_for('static', filename='imagenes') }}">
     <title>Inicio</title>
 </head>
 
@@ -51,6 +50,9 @@
                             <li><a class="dropdown-item" href="#">Químicos</a></li>
                             <li><a class="dropdown-item" href="#">Agroindustrial</a></li>
                         </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Proveedores</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="#">Información</a>
