--- a/templates/transparencia.html
+++ b/templates/transparencia.html
@@ -2,80 +2,82 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="estilos/estilos.css">
-    <title>Inicio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="estilos/estilos.css">
+  <title>Inicio</title>
 </head>
 
 <body>
-    <!-- Cabecera de la página Web -->
-    <center>
-        <IMG SRC="https://equimaxecuador.com.ec/wp-content/uploads/2022/04/Palabra-Equimax-6.png" ALIGN=CENTER WIDTH=300 HEIGHT=150>
-        <h1>Importadora industrial"</h1>
-    </center>
+  <!-- Cabecera de la página Web -->
+  <center>
+    <IMG SRC="https://equimaxecuador.com.ec/wp-content/uploads/2022/04/Palabra-Equimax-6.png" ALIGN=CENTER WIDTH=300
+      HEIGHT=150>
+    <h1>Importadora industrial"</h1>
+  </center>
 
-    <!-- Barra de navegación del sitio web -->
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid p-3 mb-2 bg-warning text-dark">
-            <a class="navbar-brand text-white" href="#">Inicio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Preguntas Frecuentes</a>
-                    </li>
+  <!-- Barra de navegación del sitio web -->
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid p-3 mb-2 bg-warning text-dark">
+      <a class="navbar-brand text-white" href="#">Inicio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active text-white" aria-current="page" href="#">Preguntas Frecuentes</a>
+          </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Importaciones
-                        </a>
-                        <!-- Menú desplegable -->
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Comestibles</a></li>
-                            <li><a class="dropdown-item" href="#">Electrónica</a></li>
-                            <li><a class="dropdown-item" href="#">Químicos</a></li>
-                            <li><a class="dropdown-item" href="#">Agroindustrial</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Información</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Transparencia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Importaciones
+            </a>
+            <!-- Menú desplegable -->
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="#">Comestibles</a></li>
+              <li><a class="dropdown-item" href="#">Electrónica</a></li>
+              <li><a class="dropdown-item" href="#">Químicos</a></li>
+              <li><a class="dropdown-item" href="#">Agroindustrial</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Proveedores</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Información</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Transparencia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted">
+  <!-- Footer -->
+  <footer class="text-center text-lg-start bg-light text-muted">
     <!-- Section: Social media -->
-    <section
-      class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
-    >
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
       <div class="me-5 d-none d-lg-block">
         <span>Importamos una gran variedad de productos en diferentes categorías bajo pedido</span>
       </div>
       <!-- Left -->
-  
+
       <!-- Right -->
       <div>
         <a href="" class="me-4 text-reset">
@@ -100,7 +102,7 @@
       <!-- Right -->
     </section>
     <!-- Section: Social media -->
-  
+
     <!-- Section: Links  -->
     <section class="">
       <div class="container text-center text-md-start mt-5">
@@ -113,11 +115,12 @@
               <i class="fas fa-gem me-3"></i>Equimax - Ecuador
             </h6>
             <p>
-                Conocemos gran variedad de proveedores de alta calidad con diferentes soluciones para la industria ecuatoriana
+              Conocemos gran variedad de proveedores de alta calidad con diferentes soluciones para la industria
+              ecuatoriana
             </p>
           </div>
           <!-- Grid column -->
-  
+
           <!-- Grid column -->
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
@@ -138,7 +141,7 @@
             </p>
           </div>
           <!-- Grid column -->
-  
+
           <!-- Grid column -->
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
@@ -159,7 +162,7 @@
             </p>
           </div>
           <!-- Grid column -->
-  
+
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
@@ -180,7 +183,7 @@
       </div>
     </section>
     <!-- Section: Links  -->
-  
+
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
       © 2021 Copyright:
@@ -190,7 +193,7 @@
   </footer>
   <!-- Footer -->
 
-   
+
 </body>
 
 </html>
