--- a/templates/preguntas.html
+++ b/templates/preguntas.html
@@ -15,12 +15,12 @@
   <link rel="stylesheet" href="estilos/estilos.css">
   <title>Inicio</title>
   <style>
-    .preguntas{
+    .preguntas {
       padding: 15px;
       width: 600pt;
     }
 
-    .preguntas > h4{
+    .preguntas>h4 {
       font-family: 'Times New Roman', Times, serif;
     }
   </style>
@@ -33,11 +33,10 @@
       HEIGHT=150>
     <h1>Importadora industrial</h1>
   </center>
-
   <!-- Barra de navegación del sitio web -->
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid p-3 mb-2 bg-warning text-dark">
-      <a class="navbar-brand text-white" href="#">Inicio</a>
+      <a class="navbar-brand text-white" href="/">Inicio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -45,7 +44,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href="#">Preguntas Frecuentes</a>
+            <a class="nav-link active text-white" aria-current="page" href="/preguntas">Preguntas Frecuentes</a>
           </li>
 
           <li class="nav-item dropdown">
@@ -55,23 +54,23 @@
             </a>
             <!-- Menú desplegable -->
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Comestibles</a></li>
-              <li><a class="dropdown-item" href="#">Electrónica</a></li>
-              <li><a class="dropdown-item" href="#">Químicos</a></li>
-              <li><a class="dropdown-item" href="#">Agroindustrial</a></li>
+              <li><a class="dropdown-item" href="/comestibles">Comestibles</a></li>
+              <li><a class="dropdown-item" href="/electronico">Electrónica</a></li>
+              <li><a class="dropdown-item" href="/quimico">Químicos</a></li>
+              <li><a class="dropdown-item" href="/agroindustrial">Agroindustrial</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Proveedores</a>
+            <a class="nav-link text-white" href="/proveedores">Proveedores</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Información</a>
+            <a class="nav-link text-white" href="/informacion">Información</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Transparencia</a>
+            <a class="nav-link text-white" href="/transparencia">Transparencia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Contacto</a>
+            <a class="nav-link text-white" href="/contacto">Contacto</a>
           </li>
         </ul>
       </div>
@@ -79,7 +78,9 @@
   </nav>
 
   <div class="preguntas">
-    <h2><p>Preguntas frecuentes de los usuarios</p></h2>
+    <h2>
+      <p>Preguntas frecuentes de los usuarios</p>
+    </h2>
     <h3 class="text-warning">¿En que provincia del Ecuador se encuetra ubicada su sede?</h3>
     <h4>En Santo Domingo de los Tsáchilas</h4>
 
