--- a/templates/proveedores.html
+++ b/templates/proveedores.html
@@ -2,83 +2,199 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="estilos/estilos.css">
-    <title>Inicio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="estilos/estilos.css">
+  <title>Inicio</title>
+  <style>
+    h1{
+      text-align: center;
+    }
+
+    .seccion1 {
+      display: flex;
+      justify-content: center;
+    }
+
+    .tareas {
+      display: grid;
+      grid-template-columns: auto auto;
+      padding: 20px;
+    }
+
+    .campos {
+      display: grid;
+      grid-template-rows: repeat(3, auto);
+    }
+
+    .entrada {
+      width: 600pt;
+    }
+
+    .boton {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+
+    .agregar {
+      display: flex;
+      padding: 20px;
+      width: 200pt;
+      height: 0px;
+      align-items: center;
+      justify-content: center;
+
+    }
+  </style>
 </head>
 
 <body>
-    <!-- Cabecera de la página Web -->
-    <center>
-        <IMG SRC="https://equimaxecuador.com.ec/wp-content/uploads/2022/04/Palabra-Equimax-6.png" ALIGN=CENTER WIDTH=300 HEIGHT=150>
-        <h1>Importadora industrial"</h1>
-    </center>
+  <!-- Cabecera de la página Web -->
+  <center>
+    <IMG SRC="https://equimaxecuador.com.ec/wp-content/uploads/2022/04/Palabra-Equimax-6.png" ALIGN=CENTER WIDTH=300
+      HEIGHT=150>
+    <h1>Importadora industrial"</h1>
+  </center>
 
-    <!-- Barra de navegación del sitio web -->
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid p-3 mb-2 bg-warning text-dark">
-            <a class="navbar-brand text-white" href="#">Inicio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Preguntas Frecuentes</a>
-                    </li>
+  <!-- Barra de navegación del sitio web -->
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid p-3 mb-2 bg-warning text-dark">
+      <a class="navbar-brand text-white" href="/">Inicio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active text-white" aria-current="page" href="/preguntas">Preguntas Frecuentes</a>
+          </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Importaciones
-                        </a>
-                        <!-- Menú desplegable -->
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Comestibles</a></li>
-                            <li><a class="dropdown-item" href="#">Electrónica</a></li>
-                            <li><a class="dropdown-item" href="#">Químicos</a></li>
-                            <li><a class="dropdown-item" href="#">Agroindustrial</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link text-white" href="#">Proveedores</a>
-                  </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Información</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Transparencia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contacto</a>
-                    </li>
-                </ul>
-            </div>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Importaciones
+            </a>
+            <!-- Menú desplegable -->
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="/comestibles">Comestibles</a></li>
+              <li><a class="dropdown-item" href="/electronico">Electrónica</a></li>
+              <li><a class="dropdown-item" href="/quimico">Químicos</a></li>
+              <li><a class="dropdown-item" href="/agroindustrial">Agroindustrial</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/proveedores">Proveedores</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/informacion">Información</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/transparencia">Transparencia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/contacto">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <br>
+  <header>
+    <!-- Título de página de importación -->
+    <h1 class="p-3 mb-2 bg-dark text-white">Agregar proveedores</h1>
+  </header>
+  <br>
+
+  <article class="seccion1">
+    <!-- Formulario -->
+    <form class="formulario" action="/ingresar_proveedor" method="post">
+      <div class="tareas p-3 mb-2 bg-warning text-dark">
+        <div class="campos">
+          <!-- etiqueta de formulario -->
+          <label for="tarea">Producto</label>
+          <!-- Input donde ingresaremos datos -->
+          <input class="entrada" id="producto" name="producto_pv" type="text">
+
+          <!-- etiqueta de formulario -->
+          <label for="correo">Precio</label>
+          <!-- Input donde ingresaremos datos -->
+          <input class="entrada" id="precio" name="precio_pv" type="text">
+
+          <!-- etiqueta de formulario -->
+          <label for="prioridad">Cantidad</label>
+          <!-- Campo que nos permitirá escoger un dato específicos -->
+          <input class="entrada" id="cantidad" name="cantidad_pv" type="number">
+
+          <br>
+
+          <!-- Botón para agregar la tarea pendiente -->
+          <div class="d-grid gap-2 col-6 mx-auto ">
+            <button class="btn btn-primary p-3 mb-2 bg-white text-dark" type="submit">Agregar producto a la lista de
+              importación</button>
+          </div>
+
         </div>
-    </nav>
+      </div>
+    </form>
 
-    <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted">
+  </article>
+
+  <article>
+
+    <!-- Tabla donde se imprimiran las tareas pendientes -->
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Proveedor</th>
+          <th scope="col">Dirección</th>
+          <th scope="col">Número telefónico</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Llamado al arreglo donde se guardaron los datos que ingresamos en el formulario -->
+        {% for proveedor in lproveedor %}
+        <tr>
+          <td>{{proveedor.producto_pv}}</td>
+          <td>{{proveedor.precio_pv}}</td>
+          <td>{{proveedor.cantidad_pv}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </article>
+
+  <!-- Formulario que llamara a la ruta '\borrar' -->
+  <form action="/borrar_proveedor" method="post" class="card">
+    <div class="d-grid gap-2 col-6 mx-auto ">
+      <!-- Botón que borrará todas las tareas pendientes de nuestra tabla -->
+      <button class="btn btn-primary p-3 mb-2 bg-warning text-dark" type="submit">Borrar Productos</button>
+    </div>
+  </form>
+
+  <br>
+
+  <!-- Footer -->
+  <footer class="text-center text-lg-start bg-light text-muted">
     <!-- Section: Social media -->
-    <section
-      class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
-    >
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
       <div class="me-5 d-none d-lg-block">
         <span>Importamos una gran variedad de productos en diferentes categorías bajo pedido</span>
       </div>
       <!-- Left -->
-  
+
       <!-- Right -->
       <div>
         <a href="" class="me-4 text-reset">
@@ -103,7 +219,7 @@
       <!-- Right -->
     </section>
     <!-- Section: Social media -->
-  
+
     <!-- Section: Links  -->
     <section class="">
       <div class="container text-center text-md-start mt-5">
@@ -116,11 +232,12 @@
               <i class="fas fa-gem me-3"></i>Equimax - Ecuador
             </h6>
             <p>
-                Conocemos gran variedad de proveedores de alta calidad con diferentes soluciones para la industria ecuatoriana
+              Conocemos gran variedad de proveedores de alta calidad con diferentes soluciones para la industria
+              ecuatoriana
             </p>
           </div>
           <!-- Grid column -->
-  
+
           <!-- Grid column -->
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
@@ -141,7 +258,7 @@
             </p>
           </div>
           <!-- Grid column -->
-  
+
           <!-- Grid column -->
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
@@ -162,7 +279,7 @@
             </p>
           </div>
           <!-- Grid column -->
-  
+
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
@@ -183,7 +300,7 @@
       </div>
     </section>
     <!-- Section: Links  -->
-  
+
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
       © 2021 Copyright:
@@ -193,7 +310,7 @@
   </footer>
   <!-- Footer -->
 
-   
+
 </body>
 
 </html>
