--- a/templates/imp_agroindustrial.html
+++ b/templates/imp_agroindustrial.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="estilos/estilos.css">
   <title>Inicio</title>
   <style>
-    h1{
+    h1 {
       text-align: center;
     }
 
@@ -63,7 +63,7 @@
   <center>
     <IMG SRC="https://equimaxecuador.com.ec/wp-content/uploads/2022/04/Palabra-Equimax-6.png" ALIGN=CENTER WIDTH=300
       HEIGHT=150>
-    <h1>Importadora industrial"</h1>
+    <h1>Importadora industrial</h1>
   </center>
 
   <!-- Barra de navegación del sitio web -->
@@ -245,16 +245,16 @@
               Productos de importación
             </h6>
             <p>
-              <a href="#!" class="text-reset">Comesitbles</a>
+              <a href="/comestibles" class="text-reset">Comesitbles</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Electrónicos</a>
+              <a href="/electronico" class="text-reset">Electrónicos</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Químicos</a>
+              <a href="/quimico" class="text-reset">Químicos</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Agroindustriales</a>
+              <a href="/agroindustrial" class="text-reset">Agroindustriales</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -266,16 +266,16 @@
               Navegación
             </h6>
             <p>
-              <a href="#!" class="text-reset">Transparencia legal</a>
+              <a href="/transparencia" class="text-reset">Transparencia legal</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Quienes somos</a>
+              <a href="/informacion" class="text-reset">Quienes somos</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Preguntas frecuentes</a>
+              <a href="/preguntas" class="text-reset">Preguntas frecuentes</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Información de contacto</a>
+              <a href="/contacto" class="text-reset">Información de contacto</a>
             </p>
           </div>
           <!-- Grid column -->
