--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
-    
+
     <title>Inicio</title>
 </head>
 
@@ -35,7 +35,8 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="/preguntas">Preguntas Frecuentes</a>
+                        <a class="nav-link active text-white" aria-current="page" href="/preguntas">Preguntas
+                            Frecuentes</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -82,7 +83,8 @@
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
                 <!-- Imágen de carrusel -->
-                <img src="/static/imagenes/imagen1.jpg" class="d-block w-100" alt="Importaciones" width="100" height="550">
+                <img src="/static/imagenes/imagen1.jpg" class="d-block w-100" alt="Importaciones" width="100"
+                    height="550">
                 <!-- Etiqueta y texto de imágen de carrusel -->
                 <div class="carousel-caption d-none d-md-block text-light bg-dark">
                     <h2>Expertos en importación</h2>
@@ -90,9 +92,9 @@
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-                 <!-- Imágen de carrusel -->
-                <img src="/static/imagenes/comestibles.jpg" class="d-block w-100" alt="Productos comestibles" width="100"
-                    height="550">
+                <!-- Imágen de carrusel -->
+                <img src="/static/imagenes/comestibles.jpg" class="d-block w-100" alt="Productos comestibles"
+                    width="100" height="550">
                 <!-- Etiqueta y texto de imágen de carrusel -->
                 <div class="carousel-caption d-none d-md-block text-light bg-dark">
                     <h2>Gran variedad de productos</h2>
@@ -100,7 +102,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                 <!-- Imágen de carrusel -->
+                <!-- Imágen de carrusel -->
                 <img src="/static/imagenes/agroindustria.jpg" class="d-block w-100" alt="agroindustria" width="100"
                     height="550">
                 <!-- Etiqueta y texto de imágen de carrusel -->
@@ -150,7 +152,7 @@
 
     <!-- Pie de página  -->
     <footer class="text-center text-lg-start bg-light text-muted">
-        
+
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
             <!-- Izquierda -->
             <div class="me-5 d-none d-lg-block">
@@ -158,7 +160,7 @@
             </div>
             <!-- Centro -->
 
-         
+
             <div>
                 <a href="" class="me-4 text-reset">
                     <i class="fab fa-facebook-f"></i>
@@ -181,7 +183,7 @@
             </div>
             <!-- Derecha -->
         </section>
-  
+
 
         <!-- Section: Links  -->
         <section class="">
@@ -208,16 +210,16 @@
                             Productos de importación
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Comesitbles</a>
+                            <a href="/comestibles" class="text-reset">Comesitbles</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Electrónicos</a>
+                            <a href="/electronico" class="text-reset">Electrónicos</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Químicos</a>
+                            <a href="/quimico" class="text-reset">Químicos</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Agroindustriales</a>
+                            <a href="/agroindustrial" class="text-reset">Agroindustriales</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -229,16 +231,16 @@
                             Navegación
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Transparencia legal</a>
+                            <a href="/transparencia" class="text-reset">Transparencia legal</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Quienes somos</a>
+                            <a href="/informacion" class="text-reset">Quienes somos</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Preguntas frecuentes</a>
+                            <a href="/preguntas" class="text-reset">Preguntas frecuentes</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Información de contacto</a>
+                            <a href="/contacto" class="text-reset">Información de contacto</a>
                         </p>
                     </div>
                     <!-- Grid column -->
