--- a/templates/proveedores.html
+++ b/templates/proveedores.html
@@ -63,7 +63,7 @@
   <center>
     <IMG SRC="https://equimaxecuador.com.ec/wp-content/uploads/2022/04/Palabra-Equimax-6.png" ALIGN=CENTER WIDTH=300
       HEIGHT=150>
-    <h1>Importadora industrial"</h1>
+    <h1>Importadora industrial</h1>
   </center>
 
   <!-- Barra de navegación del sitio web -->
@@ -123,17 +123,17 @@
       <div class="tareas p-3 mb-2 bg-warning text-dark">
         <div class="campos">
           <!-- etiqueta de formulario -->
-          <label for="tarea">Producto</label>
+          <label for="tarea">Proveedor</label>
           <!-- Input donde ingresaremos datos -->
           <input class="entrada" id="producto" name="producto_pv" type="text">
 
           <!-- etiqueta de formulario -->
-          <label for="correo">Precio</label>
+          <label for="correo">Dirección</label>
           <!-- Input donde ingresaremos datos -->
           <input class="entrada" id="precio" name="precio_pv" type="text">
 
           <!-- etiqueta de formulario -->
-          <label for="prioridad">Cantidad</label>
+          <label for="prioridad">Número Telefónico</label>
           <!-- Campo que nos permitirá escoger un dato específicos -->
           <input class="entrada" id="cantidad" name="cantidad_pv" type="number">
 
@@ -141,8 +141,7 @@
 
           <!-- Botón para agregar la tarea pendiente -->
           <div class="d-grid gap-2 col-6 mx-auto ">
-            <button class="btn btn-primary p-3 mb-2 bg-white text-dark" type="submit">Agregar producto a la lista de
-              importación</button>
+            <button class="btn btn-primary p-3 mb-2 bg-white text-dark" type="submit">Agregar Proveedor</button>
           </div>
 
         </div>
@@ -179,7 +178,7 @@
   <form action="/borrar_proveedor" method="post" class="card">
     <div class="d-grid gap-2 col-6 mx-auto ">
       <!-- Botón que borrará todas las tareas pendientes de nuestra tabla -->
-      <button class="btn btn-primary p-3 mb-2 bg-warning text-dark" type="submit">Borrar Productos</button>
+      <button class="btn btn-primary p-3 mb-2 bg-warning text-dark" type="submit">Borrar Proveedores</button>
     </div>
   </form>
 
@@ -245,16 +244,16 @@
               Productos de importación
             </h6>
             <p>
-              <a href="#!" class="text-reset">Comesitbles</a>
+              <a href="/comestibles" class="text-reset">Comesitbles</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Electrónicos</a>
+              <a href="/electronico" class="text-reset">Electrónicos</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Químicos</a>
+              <a href="/quimico" class="text-reset">Químicos</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Agroindustriales</a>
+              <a href="/agroindustrial" class="text-reset">Agroindustriales</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -266,16 +265,16 @@
               Navegación
             </h6>
             <p>
-              <a href="#!" class="text-reset">Transparencia legal</a>
+              <a href="/transparencia" class="text-reset">Transparencia legal</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Quienes somos</a>
+              <a href="/informacion" class="text-reset">Quienes somos</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Preguntas frecuentes</a>
+              <a href="/preguntas" class="text-reset">Preguntas frecuentes</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Información de contacto</a>
+              <a href="/contacto" class="text-reset">Información de contacto</a>
             </p>
           </div>
           <!-- Grid column -->
