--- a/templates/transparencia.html
+++ b/templates/transparencia.html
@@ -14,6 +14,13 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="estilos/estilos.css">
   <title>Inicio</title>
+  <style>
+    .informacion{
+      display: grid;
+      padding: 20px;
+      width: 800pt;
+    }
+  </style>
 </head>
 
 <body>
@@ -21,7 +28,7 @@
   <center>
     <IMG SRC="https://equimaxecuador.com.ec/wp-content/uploads/2022/04/Palabra-Equimax-6.png" ALIGN=CENTER WIDTH=300
       HEIGHT=150>
-    <h1>Importadora industrial"</h1>
+    <h1>Importadora industrial</h1>
   </center>
 
   <!-- Barra de navegación del sitio web -->
@@ -67,6 +74,53 @@
       </div>
     </div>
   </nav>
+
+  <!-- Información legal de importaciones -->
+  <div class="informacion">
+    <h1>Trámites para desaduanización de mercancía importada</h1>
+
+    ´<p>Para realizar los trámites de desaduanización de mercancías es necesario la asesoría y el servicio de un Agente
+      acreditado por el SENAE. El listado de Agentes de Aduana autorizados se encuentra en la siguiente ruta:
+      www.aduana.gob.ec > Servicios para OCE’s > Agentes de Aduana
+    </p>
+
+    <p>La Declaración Aduanera de Importación (DAI) deberá ser transmitida por un proveedor de Software o en el sistema
+      informático del Servicio Nacional de Aduana del Ecuador, en un período no superior a quince días calendario previo
+      a la llegada del medio de transporte, y hasta treinta días calendarios siguientes a la fecha de su arribo; de no
+      cumplirse en ese plazo, la mercancías estarán inmersas en una de las causales del abandono tácito, según lo
+      estipula el literal a) del artículo 142 del Código Orgánico de la Producción, Comercio e Inversiones.
+    </p>
+
+    <p>
+      De acuerdo al tipo de mercancía a importar, se deberán adjuntar los siguientes documentos a la DAI:
+    </p>
+
+    <b>Documentos de acompañamiento</b>
+    <p>Se constituyen documentos de acompañamiento aquellos que denominados de control previo, deben tramitarse y
+      aprobarse antes del embarque de la mercancía de importación. (Art. 72 del Reglamento al Libro V del Copci).
+    </p>
+
+    <b>Documentos de soporte</b>
+    <p>Constituirán la base de la información de la DAI a cualquier régimen. Estos documentos originales, ya sea en
+      físico
+      o electrónico, deberán reposar en el archivo del declarante o su Agente de Aduanas al momento de la presentación o
+      transmisión de la Declaración Aduanera, y estarán bajo su responsabilidad conforme a lo determinado en la Ley.
+      (Art.
+      73 del Reglamento al Libro V del Copci).
+    </p>
+
+    <ul>
+      <li>Documento de Transporte</li>
+      <li>Factura comercial o documento que acredite la transacción comercial</li>
+      <li>Certificado de Origen (cuando proceda)</li>
+      <li>Documentos que el SENAE o el Organismo regulador de Comercio Exterior considere necesarios.</li>
+    </ul>
+
+    <p>Transmitida la DAI, el sistema informático del Servicio Nacional de Aduana del Ecuador le otorgará el número de
+      la
+      declaración aduanera de importación y el canal de aforo que corresponda.
+    </p>
+  </div>
 
   <!-- Footer -->
   <footer class="text-center text-lg-start bg-light text-muted">
@@ -128,16 +182,16 @@
               Productos de importación
             </h6>
             <p>
-              <a href="#!" class="text-reset">Comesitbles</a>
+              <a href="/comestibles" class="text-reset">Comesitbles</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Electrónicos</a>
+              <a href="/electronico" class="text-reset">Electrónicos</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Químicos</a>
+              <a href="/quimico" class="text-reset">Químicos</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Agroindustriales</a>
+              <a href="/agroindustrial" class="text-reset">Agroindustriales</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -149,16 +203,16 @@
               Navegación
             </h6>
             <p>
-              <a href="#!" class="text-reset">Transparencia legal</a>
+              <a href="/transparencia" class="text-reset">Transparencia legal</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Quienes somos</a>
+              <a href="/informacion" class="text-reset">Quienes somos</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Preguntas frecuentes</a>
+              <a href="/preguntas" class="text-reset">Preguntas frecuentes</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Información de contacto</a>
+              <a href="/contacto" class="text-reset">Información de contacto</a>
             </p>
           </div>
           <!-- Grid column -->
