--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -200,16 +200,16 @@
                             Productos de importación
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Comesitbles</a>
+                            <a href="/comestibles" class="text-reset">Comesitbles</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Electrónicos</a>
+                            <a href="/electronico" class="text-reset">Electrónicos</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Químicos</a>
+                            <a href="/quimico" class="text-reset">Químicos</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Agroindustriales</a>
+                            <a href="/agroindustrial" class="text-reset">Agroindustriales</a>
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -221,16 +221,16 @@
                             Navegación
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Transparencia legal</a>
+                            <a href="/transparencia" class="text-reset">Transparencia legal</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Quienes somos</a>
+                            <a href="/informacion" class="text-reset">Quienes somos</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Preguntas frecuentes</a>
+                            <a href="/preguntas" class="text-reset">Preguntas frecuentes</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Información de contacto</a>
+                            <a href="/contacto" class="text-reset">Información de contacto</a>
                         </p>
                     </div>
                     <!-- Grid column -->
